# AI-video-censorship-engine

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
censorship-api/: Dockerfile  main.py  requirements.txt  test_api.py
config/: base.yaml
config/presets/: balanced.yaml  precision.yaml  strict.yaml
docs/: architecture.md  benchmarks.md  configuration.md  installation.md  quickstart.md
experiments/: results (3).csv
live demo/: demo_script_on_gpu.py  demo_scrpit_on_cpu.py
live demo/input video /: clarification.txt
metadata/: censored_demo.metadata.json  censored_output_53.metadata.json
src/: __init__.py
src/ai_video_censorship_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/censorship_engine/: __init__.py  optimized_pipeline.py  pipeline.py
src/censorship_engine/conversion/: onnx_runtime.py  rtdetr_to_onnx.py
src/censorship_engine/core/: __init__.py  datatypes.py  exceptions.py  interfaces.py
src/censorship_engine/detection/: __init__.py  face_detector.py  rtdetr_detector.py
src/censorship_engine/fusion/: detection_fuser.py
src/censorship_engine/monitoring/: metrics.py
src/censorship_engine/rendering/: censorship.py  strategies.py
src/censorship_engine/tracking/: deep_sort.py
src/censorship_engine/video/: __init__.py  loader.py  test.py  writer.py
tests/: __init__.py  test_datatypes.py  test_detection.py  test_fusion.py  test_pipeline.py  test_pipeline_comp.py  test_rendering.py  test_rtdetr_detector.py  test_tracking.py
